# backend-assignment

./: .gitignore  pyproject.toml
app/: config.py  db.py  errors.py  orm.py  services.py  state_model.py  user.py  utils.py
tests/: conftest.py
tests/unit/: test_bank_system.py
