[tool.pytest.ini_options]
addopts = "-s -v --tb=auto"
testpaths = "tests"

env = [
    "STAGE=testing",
    "SQLALCHEMY_WARN_20=1"
]


[tool.poetry]
name = "bering-assignment"
version = "1.0.0"
description = "bering-assignment"
authors = ["Migorithm"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pytest = "*"
sqlalchemy = "*"
greenlet = "*"
httpx = "*"
uvloop = "*"
asyncmy = "^0.2.7"
mysql-connector-python = "^8.0.33"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
coverage = "*"
Faker = "*"
pytest-asyncio = "*"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-dotenv = "*"
types-requests = "*"
debugpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
